src/objects/LG_OrderDecompositionSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country specific Order Decomposition Settings</description>
    <fields>
        <fullName>LG_AllTogetherDecompositionCriteria__c</fullName>
        <description>Holds the name of the All together Decomposition Criteria, regardless of site and product</description>
        <label>All Together Decomposition Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_CombineInternetDecompositionCriteria__c</fullName>
        <label>CombineInternetDecompositionCriteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_GroupDependentWithParent__c</fullName>
        <label>Group Dependent With Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LegacyDecompositionCriteria__c</fullName>
        <description>Holds the name of the Legacy Decomposition Criteria</description>
        <label>Legacy Decomposition Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MacdDecompositionCriteria__c</fullName>
        <label>MacdDecompositionCriteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_NoGroupingDecompositionCriteria__c</fullName>
        <description>Holds the name of the No Grouping Decomposition Criteria</description>
        <label>No Grouping Decomposition Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_OverrideNogroupingCriteria__c</fullName>
        <label>Override No grouping Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PerSiteDecompositionCriteria__c</fullName>
        <label>Per Site Decomposition Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SiteAgnosticProductFamilies__c</fullName>
        <description>Holds the comma separated list of product families that are site-agnostic. Site/Address will not be taken into account when grouping the services under the same solution.</description>
        <inlineHelpText>Holds the comma separated list of product families that are site-agnostic. Site/Address will not be taken into account when grouping the services under the same solution.</inlineHelpText>
        <label>Site Agnostic Product Families</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Decomposition Settings</label>
</CustomObject>